Refactor OrderService and OrderItemService implementations for schema integration